--- a/home/private_dot_config/hypr/conf/keys.conf
+++ b/home/private_dot_config/hypr/conf/keys.conf
@@ -12,6 +12,7 @@ bind = $mainMod, N, exec, $termStart --class "notes-editor" -e notes-commit
 bind = $mainMod SHIFT, L, exec, hyprlock
 bind = $mainMod, S,exec, grimblast copy area
 bind = $mainMod SHIFT,S, exec, grimblast edit area
+bind = $mainMod, D, exec, makoctl dismiss
 
 bind = $mainMod SHIFT, m, exit,
 bind = $mainMod SHIFT, R, exec, hyprctl reload
