--- a/home/private_dot_config/hypr/conf/execs.conf
+++ b/home/private_dot_config/hypr/conf/execs.conf
@@ -10,6 +10,5 @@ exec-once = xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOB
 exec = hypridle
 exec = kanshi
 
-# TODO: make hyprman kill eww if necessary
-exec = pkill eww & hyprman monitors
+exec = pkill eww & hyprman eww monitors
 
