hyprman doens't poll it reacts

--- a/home/private_dot_config/hypr/conf/execs.conf
+++ b/home/private_dot_config/hypr/conf/execs.conf
@@ -1,4 +1,3 @@
-# exec-once = ~/.config/hypr/start_eww.sh &
 # exec-once = flameshot &
 exec = swww init
 
@@ -10,5 +9,5 @@ exec-once = xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOB
 exec = hypridle
 exec = kanshi
 
-exec = pkill eww & hyprman eww monitors
+exec = pkill eww & hyprman eww start
 
