update vscode logos for hyprman

--- a/home/private_dot_config/hyprman/config.yml
+++ b/home/private_dot_config/hyprman/config.yml
@@ -2,7 +2,8 @@ default-icon: 
 no-client: "-"
 classes:
   "[Running] - Oracle VM VirtualBox": 
-  "Visual Studio Code": "
+  "Visual Studio Code": 
+  "code-url-handler": 
   "vivaldi-stable": 󰖟
   "google-chrome": 
   "chromium-browser": 
