--- a/home/private_dot_config/omp/config.yml
+++ b/home/private_dot_config/omp/config.yml
@@ -1,5 +1,4 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/JanDeDobbeleer/oh-my-posh/main/themes/schema.json
-# TODO: add segments I care about.... go python node.... so on?
 version: 2 
 transient_prompt:
   foreground: cyan
@@ -15,12 +14,12 @@ blocks:
         foreground: "yellow"
         template: " {{ .Full }}"
       - type: git
-        foreground: '#F3C267'
-        foreground_templates:
-          - '{{ if or (.Working.Changed) (.Staging.Changed) }}#FF9248{{ end }}'
-          - '{{ if and (gt .Ahead 0) (gt .Behind 0) }}#ff4500{{ end }}'
-          - '{{ if gt .Ahead 0 }}#B388FF{{ end }}'
-          - '{{ if gt .Behind 0 }}#B388FF{{ end }}'
+        foreground: magenta
+        # foreground_templates:
+        #   - '{{ if or (.Working.Changed) (.Staging.Changed) }}#FF9248{{ end }}'
+        #   - '{{ if and (gt .Ahead 0) (gt .Behind 0) }}#ff4500{{ end }}'
+        #   - '{{ if gt .Ahead 0 }}#B388FF{{ end }}'
+        #   - '{{ if gt .Behind 0 }}#B388FF{{ end }}'
         properties:
           branch_max_length: 25
           fetch_stash_count: true
@@ -28,21 +27,15 @@ blocks:
           fetch_upstream_icon: true
         style: plain
         template: >
-          {{ .UpstreamIcon }}{{ .HEAD }}{{if .BranchStatus }} {{ .BranchStatus }}{{ end }}
-          {{ if .Working.Changed }}  {{ .Working.String }}{{ end }}
-          {{ if and (.Working.Changed) (.Staging.Changed) }} |{{ end }}
-          {{ if .Staging.Changed }}  {{ .Staging.String }}{{ end }}
-          {{ if gt .StashCount 0 }}  {{ .StashCount }}{{ end }}
+          {{ .UpstreamIcon }}{{ .HEAD }}{{ if .BranchStatus }}{{ .BranchStatus }}{{ end -}}
+          {{ if .Working.Changed }}  {{ .Working.String }}{{ end -}}
+          {{ if and (.Working.Changed) (.Staging.Changed) }}|{{ end -}}
+          {{ if .Staging.Changed }}  {{ .Staging.String }}{{ end -}}
+          {{ if gt .StashCount 0 }}  {{ .StashCount }}{{ end -}}
   - type: prompt
     alignment: left
     newline: true
     segments:
-      - type: session
-        background: transparent
-        foreground: "#ffffff"
-        style: diamond
-        template: >
-          {{ if .SSHSession }} {{ .UserName}}@{{ .HostName }}{{ end }}
       - type: path
         foreground: 'cyan'
         properties:
@@ -58,15 +51,20 @@ blocks:
         foreground_templates:
           - '{{ if gt .Code 0 }}red{{ end }}'
         template: ' x{{ reason .Code }}'
-      - foreground: 'green'
+      - type: executiontime
+        style: plain
+        foreground: 'green'
         foreground_templates:
           - '{{ if gt .Code 0 }}red{{ end }}'
         properties:
-          style: roundrock
-          always_enabled: true
-        style: diamond
+          style: austin
         template: ' {{ .FormattedMs }} '
-        type: executiontime
+      - type: session
+        style: plain
+        foreground: darkGray
+        template: >
+          {{ if .SSHSession }} {{ .UserName}}@{{ .HostName }}{{ end }}
+
   - type: prompt
     alignment: left
     newline: true
