--- a/home/private_dot_config/hypr/hypridle.conf
+++ b/home/private_dot_config/hypr/hypridle.conf
@@ -5,11 +5,11 @@ general {
     after_sleep_cmd = hyprctl dispatch dpms on  # to avoid having to press a key twice to turn on the display.
 }
 
-listener {
-    timeout = 150                                # 2.5min.
-    on-timeout = brightnessctl -s set 10         # set monitor backlight to minimum, avoid 0 on OLED monitor.
-    on-resume = brightnessctl -r                 # monitor backlight restor.
-}
+# listener {
+#     timeout = 150                                # 2.5min.
+#     on-timeout = brightnessctl -s set 10         # set monitor backlight to minimum, avoid 0 on OLED monitor.
+#     on-resume = brightnessctl -r                 # monitor backlight restor.
+# }
 
 listener {
     timeout = 300                                 # 5min
