--- a/home/.chezmoiignore
+++ b/home/.chezmoiignore
@@ -1,3 +1,8 @@
+.config/zsh/local
+.config/zsh/.antidote
+.config/zsh/.zcompdump
+.config/zsh/.zplugins.zsh
+
 {{- if (not .gui) }}
 bin/get-updates
 bin/lock
