add window swapping binds

--- a/home/private_dot_config/hypr/conf/keys.conf
+++ b/home/private_dot_config/hypr/conf/keys.conf
@@ -26,6 +26,10 @@ bind = $mainMod, h, movefocus, l
 bind = $mainMod, j, movefocus, u
 bind = $mainMod, k, movefocus, d
 bind = $mainMod, l, movefocus, r
+bind = $mainMod CTRL, h, swapwindow, l
+bind = $mainMod CTRL, j, swapwindow, d
+bind = $mainMod CTRL, k, swapwindow, u
+bind = $mainMod CTRL, l, swapwindow, r
 
 # Switch workspaces with mainMod + [1-9]
 bind = $mainMod, 1, focusworkspaceoncurrentmonitor, 1
