--- a/home/private_dot_config/hypr/conf/execs.conf
+++ b/home/private_dot_config/hypr/conf/execs.conf
@@ -1,9 +1,9 @@
 # exec-once = flameshot &
-exec = swww init
 
 # exec-once = dunst -conf ~/.config/hypr/dunstrc
+exec-once = swww-daemon
 exec-once = mako
-exec-once = udiskie &
+exec-once = udiskie
 exec-once = xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL_OUTPUT_SCALE 2
 
 exec = hypridle
