--- a/home/private_dot_config/omp/config.yml
+++ b/home/private_dot_config/omp/config.yml
@@ -8,6 +8,7 @@ palette:
   rosewater: '#f5e0dc'
   sky: '#89dceb'
 final_space: true
+shell_integration: true
 blocks:
   - type: prompt
     alignment: left
