--- a/home/private_dot_config/lazygit/config.yml
+++ b/home/private_dot_config/lazygit/config.yml
@@ -1,6 +1,7 @@
 git:
   # see ~/.config/git/config
-  branchLogCmd: "git l"
+  branchLogCmd: "git l --color=always"
+  allBranchesLogCmd: "git log --color=always"
   paging:
     colorArg: always
     pager: delta --dark --paging=never
@@ -13,7 +14,7 @@ customCommands:
     context: "files"
 
 gui:
-  nerdFontsVersion: 3
+  nerdFontsVersion: "3"
   showIcons: true
   showFileTree: true
   # https://github.com/catppuccin/lazygit/blob/main/themes/mocha/rosewater.yml
@@ -23,19 +24,26 @@ gui:
       - bold
     inactiveBorderColor:
       - '#a6adc8'
+    searchingActiveBorderColor:
+      - '#f9e2af'
     optionsTextColor:
       - '#89b4fa'
     selectedLineBgColor:
       - '#313244'
-    cherryPickedCommitBgColor:
-      - '#45475a'
     cherryPickedCommitFgColor:
       - '#f5e0dc'
+    cherryPickedCommitBgColor:
+      - '#45475a'
     unstagedChangesColor:
       - '#f38ba8'
     defaultFgColor:
       - '#cdd6f4'
-    searchingActiveBorderColor:
-      - '#f9e2af'
-    authorColors:
-      '*': '#b4befe'
+    #
+    # # Foreground color of marked base commit (for rebase)
+    # markedBaseCommitFgColor:
+    #   - blue
+    # # Background color of marked base commit (for rebase)
+    # markedBaseCommitBgColor:
+    # - yellow
+
+
