update hyprlock faster

--- a/home/private_dot_config/hypr/hyprlock.conf
+++ b/home/private_dot_config/hypr/hyprlock.conf
@@ -23,7 +23,7 @@ background {
 # TIME
 label {
     monitor =
-    text = cmd[update:30000] echo "$(date +"%R")"
+    text = cmd[update:1000] echo "$(date +"%R")"
     color = $text
     font_size = 90
     font_family = $font
@@ -35,7 +35,7 @@ label {
 # DATE
 label {
     monitor =
-    text = cmd[update:43200000] echo "$(date +"%A, %d %B %Y")"
+    text = cmd[update:6000] echo "$(date +"%A, %d %B %Y")"
     color = $text
     font_size = 25
     font_family = $font
