--- a/home/private_dot_config/hypr/conf/keys.conf
+++ b/home/private_dot_config/hypr/conf/keys.conf
@@ -65,7 +65,7 @@ bind = $mainMod CTRL, 8, movetoworkspacesilent, 8
 bind = $mainMod CTRL, 9, movetoworkspacesilent, 9
 
 bind = , XF86AudioLowerVolume, exec, pamixer --decrease 5
-bind = , XF86AudioRaiseVolume, exec, pamixer --increase 5
+bind = , XF86AudioRaiseVolume, exec, pamixer --unmute && pamixer --increase 5
 bind = , XF86AudioMute, exec, pamixer --toggle-mute
 bind = , XF86MonBrightnessUp, exec, brightnessctl set +5%
 bind = , XF86MonBrightnessDown, exec, brightnessctl set 5%-
