--- a/home/private_dot_config/hypr/hyprland.conf
+++ b/home/private_dot_config/hypr/hyprland.conf
@@ -1,13 +1,12 @@
 # let kanshi handle it
 monitor=,preferred,auto,1
-# monitor=eDP-1,1920x1200,1920x0,1
-# monitor=DP-3,1920x1080,0x0,1
 
 # Some default env vars.
-# env = GDK_SCALE,2
 env = XCURSOR_SIZE,24
+env = HYRPCURSOR_THEME,catppuccin-mocha-dark-cursors
+env = HYPRCURSOR_SIZE,24
 env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
-# env = GTK_THEME, Catppuccin-Mocha-Standard-Rosewater-Dark
+env = NIXOS_OZONE_WL,1 # should this go somewhere else?
 
 debug {
     disable_logs = false
@@ -67,7 +66,7 @@ gestures {
 misc {
   disable_autoreload = true
   disable_splash_rendering = true
-  force_default_wallpaper = 0 # Set to 0 to disable the anime mascot wallpapers
+  force_default_wallpaper = 0 # Set tjo 0 to disable the anime mascot wallpapers
 }
 
 animation=windows,1,5,default,popin 80%
