cursors aren't automatically set?

--- a/home/private_dot_config/hypr/conf/execs.conf
+++ b/home/private_dot_config/hypr/conf/execs.conf
@@ -1,6 +1,7 @@
 # exec-once = flameshot &
 
 # exec-once = dunst -conf ~/.config/hypr/dunstrc
+exec-once = hyprctl setcursor catppuccin-mocha-dark-cursors 24
 exec-once = swww-daemon
 exec-once = mako
 exec-once = udiskie
