--- a/home/private_dot_config/gtk-4.0/settings.ini
+++ b/home/private_dot_config/gtk-4.0/settings.ini
@@ -1,4 +1,14 @@
 [Settings]
 ; gtk-icon-theme-name=breeze
 ; gtk-theme-name=Catppuccin-Mocha-Standard-Rosewater-Dark
-gtk-application-prefer-dark-theme=false
+gtk-application-prefer-dark-theme=true
+gtk-cursor-theme-name=Catppuccin-Mocha-Mauve-Cursors
+gtk-cursor-theme-size=24
+gtk-decoration-layout=icon:minimize,maximize,close
+gtk-enable-animations=true
+gtk-font-name=Noto Sans,  10
+gtk-icon-theme-name=breeze
+gtk-modules=colorreload-gtk-module
+gtk-primary-button-warps-slider=true
+gtk-sound-theme-name=ocean
+gtk-xft-dpi=122880
