--- a/home/private_dot_config/private_gtk-3.0/settings.ini
+++ b/home/private_dot_config/private_gtk-3.0/settings.ini
@@ -1,3 +1,16 @@
 [Settings]
+gtk-application-prefer-dark-theme=true
+gtk-button-images=true
+gtk-cursor-theme-name=Catppuccin-Mocha-Mauve-Cursors
+gtk-cursor-theme-size=24
+gtk-decoration-layout=icon:minimize,maximize,close
+gtk-enable-animations=true
+gtk-font-name=Noto Sans,  10
+gtk-icon-theme-name=breeze
+gtk-menu-images=true
+gtk-modules=colorreload-gtk-module
+gtk-primary-button-warps-slider=true
+gtk-sound-theme-name=ocean
 gtk-theme-name=Catppuccin-Mocha-Standard-Rosewater-Dark
-gtk-application-prefer-dark-theme=false
+gtk-toolbar-style=3
+gtk-xft-dpi=122880
