--- a/home/private_dot_config/hypr/hyprland.conf
+++ b/home/private_dot_config/hypr/hyprland.conf
@@ -1,12 +1,15 @@
 # let kanshi handle it
 monitor=,preferred,auto,1
 
+env = NIXOS_OZONE_WL,1 # should this go somewhere else?
+
 # Some default env vars.
 env = XCURSOR_SIZE,24
 env = HYRPCURSOR_THEME,catppuccin-mocha-dark-cursors
 env = HYPRCURSOR_SIZE,24
-env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
-env = NIXOS_OZONE_WL,1 # should this go somewhere else?
+
+env = QT_QPA_PLATFORM,wayland
+# env = QT_QPA_PLATFORMTHEME,qt6ct
 
 debug {
     disable_logs = false
