don't notice me

--- a/home/private_dot_config/omp/config.yml
+++ b/home/private_dot_config/omp/config.yml
@@ -9,6 +9,7 @@ palette:
   sky: '#89dceb'
 final_space: true
 shell_integration: true
+disable_notice: true
 blocks:
   - type: prompt
     alignment: left
