lots of monitor hyprman related changes

--- a/home/private_dot_config/hypr/conf/execs.conf
+++ b/home/private_dot_config/hypr/conf/execs.conf
@@ -1,14 +1,13 @@
-# exec-once = flameshot &
-
-# exec-once = dunst -conf ~/.config/hypr/dunstrc
 exec-once = hyprctl setcursor catppuccin-mocha-dark-cursors 24
 exec-once = swww-daemon
 exec-once = mako
 exec-once = udiskie
 exec-once = xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL_OUTPUT_SCALE 2
 
+# moved to systemd units in oizys
 exec = hypridle
 exec = kanshi
 
-exec = pkill eww & hyprman eww start
+exec = pkill eww & hyprman start
+exec = hyprman swww
 
