--- a/home/private_dot_config/kanshi/config
+++ b/home/private_dot_config/kanshi/config
@@ -1,22 +1,23 @@
+# othalan alias not working?
+# output "InfoVision Optoelectronics (Kunshan) Co.Ltd China 0x8C44" alias $othalan
+output "Ancor Communications Inc VN279 M4LMQS079020" alias $work-tall
+output "Ancor Communications Inc ASUS MX239 H4LMTJ010711" alias $work-middle
+output "Acer Technologies Acer H236HL LX1AA0044210" alias $home-monitor
+
+
 profile default {
   output eDP-1 mode 1920x1200 position 0,0
 }
 
+profile home {
+  output eDP-1         mode 1920x1200 position 1920,0
+  output $home-monitor mode 1920x1080 position 0,0
+}
+
+# three monitors :)
 profile work {
-  output eDP-1 mode 1920x1200 position 1920,0
-  output DP-3 mode 1920x1080 position 0,0
-  exec swww img -o eDP-1 ~/.config/hypr/wallpapers/current/00005-4229950720.png & swww img -o DP-3 ~/.config/hypr/wallpapers/current/00007-2215131892.png
-}
-
-profile {
-  output eDP-1 mode 1920x1200 position 1920,0
-  output DP-5 mode 1920x1080 position 0,0
-  exec swww img -o eDP-1 ~/.config/hypr/wallpapers/current/00005-4229950720.png & swww img -o DP-5 ~/.config/hypr/wallpapers/current/00007-2215131892.png
-}
-
-profile {
-  output eDP-1 mode 1920x1200 position 1920,0
-  output DP-6 mode 1920x1080 position 0,0
-  exec swww img -o eDP-1 ~/.config/hypr/wallpapers/current/00005-4229950720.png & swww img -o DP-6 ~/.config/hypr/wallpapers/current/00007-2215131892.png
+  output eDP-1        mode 1920x1200 position 3000,960
+  output $work-middle mode 1920x1080 position 1080,960
+  output $work-tall   mode 1920x1080 position 0,0 transform 90
 }
 
