more hyprman cleanup

--- a/home/private_dot_config/hypr/conf/keys.conf
+++ b/home/private_dot_config/hypr/conf/keys.conf
@@ -14,6 +14,7 @@ bind = $mainMod SHIFT, L, exec, hyprlock
 bind = $mainMod, S,exec, grimblast copy area
 bind = $mainMod SHIFT,S, exec, grimblast edit area
 bind = $mainMod, D, exec, makoctl dismiss
+bind = $mainMod, C, exec, google-chrome-stable
 
 bind = $mainMod SHIFT, m, exit,
 bind = $mainMod SHIFT, R, exec, hyprctl reload
