--- a/home/private_dot_config/hypr/hyprland.conf
+++ b/home/private_dot_config/hypr/hyprland.conf
@@ -1,6 +1,8 @@
 # let kanshi handle it
 monitor=,preferred,auto,1
 
+exec = ~/.config/hypr/execs.sh
+
 env = NIXOS_OZONE_WL,1 # should this go somewhere else?
 
 # Some default env vars.
