ghostty journey begins

--- a/home/private_dot_config/hypr/conf/keys.conf
+++ b/home/private_dot_config/hypr/conf/keys.conf
@@ -1,6 +1,8 @@
 $mainMod = SUPER
-$term = wezterm
-$termStart = wezterm start
+$term = ghostty
+$termStart = ghostty
+# $term = wezterm
+# $termStart = wezterm start
 # $term = alacritty
 # $termStart = alacritty
 env = GRIMBLAST_EDITOR, ksnip
