--- a/home/private_dot_config/hypr/hyprland.conf
+++ b/home/private_dot_config/hypr/hyprland.conf
@@ -37,10 +37,11 @@ decoration {
         size = 3
         passes = 1
     }
-    drop_shadow = yes
-    shadow_range = 20
-    shadow_render_power = 2
-    col.shadow = rgba(1a1a1aee)
+    shadow {
+      range = 20
+      render_power = 2
+      color = rgba(1a1a1aee)
+    }
 }
 
 animations {
