no icons json only icons yml

--- a/home/private_dot_config/hyprman/config.yml
+++ b/home/private_dot_config/hyprman/config.yml
@@ -16,6 +16,7 @@ classes:
   "Alacritty": 
   "- Wezterm": 
   "org.wezfurlong.wezterm": 
+  "com.mitchellh.ghostty": 
   "MultiViewer for F1": 
 
 
