update for ghostty

--- a/home/private_dot_config/hypr/conf/keys.conf
+++ b/home/private_dot_config/hypr/conf/keys.conf
@@ -10,8 +10,8 @@ env = GRIMBLAST_EDITOR, ksnip
 # Program binds
 bind = $mainMod SHIFT, RETURN, exec, $term
 bind = $mainMod, P, exec, ~/.config/rofi/bin/launcher.sh
-bind = $mainMod, N, exec, $termStart --class "float-editor" -e notes-commit
-bind = $mainMod, T, exec, $termStart --class "float-editor" -e zk ei
+bind = $mainMod, N, exec, $termStart --class="float.editor" -e notes-commit
+bind = $mainMod, T, exec, $termStart --class="float.editor" -e zk ei
 bind = $mainMod SHIFT, L, exec, hyprlock
 bind = $mainMod, S,exec, grimblast copy area
 bind = $mainMod SHIFT,S, exec, grimblast edit area
