--- a/home/private_dot_config/private_jj/config.toml
+++ b/home/private_dot_config/private_jj/config.toml
@@ -8,4 +8,12 @@ backend = "gpg"
 signingkey = "7AD9DB430EE2B3C1D86BF3243CD66E04B8072F3E"
 
 [git]
-private-commits = "description(glob:\"private:*\")"
+private-commits = "description(glob:'wip:*') | description(glob:'private:*')"
+
+[ui]
+default-command = "log"
+pager = "delta"
+diff-editor = ":builtin"
+
+[ui.diff]
+format = "git"
