--- a/home/private_dot_config/hypr/conf/keys.conf
+++ b/home/private_dot_config/hypr/conf/keys.conf
@@ -13,8 +13,10 @@ bind = $mainMod, P, exec, ~/.config/rofi/bin/launcher.sh
 bind = $mainMod, N, exec, $termStart --class="float.editor" -e notes-commit
 bind = $mainMod, T, exec, $termStart --class="float.editor" -e zk ei
 bind = $mainMod SHIFT, L, exec, hyprlock
-bind = $mainMod, S,exec, grimblast copy area
-bind = $mainMod SHIFT,S, exec, grimblast edit area
+bind = $mainMod, S, exec, flameshot gui
+bind = $mainMod SHIFT, S, exec, flameshot screen 
+# bind = $mainMod, S,exec, grimblast copy area
+# bind = $mainMod SHIFT,S, exec, grimblast edit area
 bind = $mainMod, D, exec, makoctl dismiss
 bind = $mainMod, C, exec, google-chrome-stable
 
