--- a/home/private_dot_config/hypr/conf/windows.conf
+++ b/home/private_dot_config/hypr/conf/windows.conf
@@ -1,5 +1,3 @@
-windowrulev2 = tile,class:(Vivaldi-stable)
-
 windowrulev2 = float,class:^(MultiViewer for F1)$
 
 # notes-editor rules
@@ -9,11 +7,16 @@ windowrulev2 = size 80% 80% ,class:^(float.editor)$
 windowrulev2 = dimaround, class:^(float.editor)$
 windowrulev2 = animation popin 50%, class:^(float.editor)$
 
+# flameshot is still weird and buggy as of 2024/11/21
 # noanim isn't necessary but animations with these rules might look bad. use at your own discretion.
-windowrulev2 = noanim, class:^(flameshot)$
-windowrulev2 = float, class:^(flameshot)$
-windowrulev2 = move 0 0, class:^(flameshot)$
-windowrulev2 = pin, class:^(flameshot)$
-# set this to your leftmost monitor id, otherwise you have to move your cursor to the leftmost monitor
-# before executing flameshot
-windowrulev2 = monitor 1, class:^(flameshot)$
+# windowrulev2 = noanim, class:^(flameshot)$
+# windowrulev2 = float, class:^(flameshot)$
+# windowrulev2 = move 0 0, class:^(flameshot)$
+# windowrulev2 = pin, class:^(flameshot)$
+# # set this to your leftmost monitor id, otherwise you have to move your cursor to the leftmost monitor
+# # before executing flameshot
+# windowrulev2 = monitor 1, class:^(flameshot)$
+#
+# possibly why? https://github.com/hyprwm/Hyprland/issues/1987
+# windowrulev2 = size 20% 20%, class:^(google-chrome)$
+# windowrulev2 = tile, class:^(google-chrome)$
