only bookmark commits with data

--- a/home/private_dot_config/private_jj/config.toml
+++ b/home/private_dot_config/private_jj/config.toml
@@ -21,4 +21,4 @@ format = "git"
 [aliases]
 wip = ["ci", "-m", "wip"]
 la = ["log", "-r", "all()"]
-bsm = ["bookmark", "set", "main"]
+bsm = ["bookmark", "set", "main", "-r", "latest(~empty())"]
