--- a/home/private_dot_config/private_jj/config.toml
+++ b/home/private_dot_config/private_jj/config.toml
@@ -26,3 +26,32 @@ bsm = [
   # first non-empty change from current revset
   "latest(::@ & ~empty())"
 ]
+l = ["log", "-T", "log_oneline"]
+
+[template-aliases]
+# adapted from log oneline
+log_oneline = '''
+if(root,
+  format_root_commit(self),
+  label(if(current_working_copy, "working_copy"),
+    concat(
+      separate(" ",
+        format_short_change_id_with_hidden_and_divergent_info(self),
+        if(author.email(), author.username(), email_placeholder),
+        if(description,
+          description.first_line(),
+          label(if(empty, "empty"), description_placeholder),
+        ),
+        if(empty, label("empty", "(empty)")),
+        format_timestamp(committer.timestamp()),
+        bookmarks,
+        tags,
+        working_copies,
+        if(git_head, label("git_head", "git_head()")),
+        if(conflict, label("conflict", "conflict")),
+      ) ++ "\n",
+    ),
+  )
+)
+'''
+
