--- a/home/private_dot_config/hypr/hyprland.conf
+++ b/home/private_dot_config/hypr/hyprland.conf
@@ -11,7 +11,7 @@ env = HYRPCURSOR_THEME,catppuccin-mocha-dark-cursors
 env = HYPRCURSOR_SIZE,24
 
 env = QT_QPA_PLATFORM,wayland
-# env = QT_QPA_PLATFORMTHEME,qt6ct
+env = QT_QPA_PLATFORMTHEME,qt5ct
 
 debug {
     disable_logs = false
