--- a/home/private_dot_config/alacritty/private_alacritty.toml
+++ b/home/private_dot_config/alacritty/private_alacritty.toml
@@ -1,4 +1,3 @@
-import = ["/home/daylin/.config/alacritty/catppuccin-mocha.toml"]
 
 [cursor.style]
 blinking = "Never"
@@ -25,3 +24,6 @@ lines = 45
 [window.padding]
 x = 10
 y = 10
+
+[general]
+import = ["/home/daylin/.config/alacritty/catppuccin-mocha.toml"]
