--- a/home/private_dot_config/private_jj/config.toml
+++ b/home/private_dot_config/private_jj/config.toml
@@ -30,7 +30,7 @@ bsm = [
 l = ["log", "-T", "log_oneline"]
 
 [revsets]
-log = "present(@) | ancestors(immutable_heads().., 3) | present(trunk())"
+log = '@ | ancestors(trunk()..(visible_heads() & mine()), 2) | trunk()'
 # default
 # log = "present(@) | ancestors(immutable_heads().., 2) | present(trunk())"
 
@@ -60,3 +60,5 @@ if(root,
 )
 '''
 
+[revset-aliases]
+"heads()" = '@ | ancestors(trunk()..(visible_heads()), 2) | trunk()'
