fun with firefox

--- a/home/private_dot_config/hyprman/config.yml
+++ b/home/private_dot_config/hyprman/config.yml
@@ -11,7 +11,7 @@ classes:
   "LibreOffice": 
   # "Geneious Prime": 󰚄
   "com-biomatters-iseek-application-ISeekMain": 󰚄
-  "Firefox": 
+  "firefox": 
   "- NVIM": 
   "Alacritty": 
   "- Wezterm": 
