--- a/home/private_dot_config/omp/config.yml
+++ b/home/private_dot_config/omp/config.yml
@@ -1,98 +1,109 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/JanDeDobbeleer/oh-my-posh/main/themes/schema.json
-version: 2 
+
+palette:
+  rosewater: "#f5e0dc"
+  sky: "#89dceb"
 transient_prompt:
+  template: "❯ "
   foreground: cyan
   background: transparent
-  template: "❯ "
-palette:
-  rosewater: '#f5e0dc'
-  sky: '#89dceb'
-final_space: true
-shell_integration: true
-disable_notice: true
 blocks:
-  - type: prompt
-    alignment: left
-    segments:
-      # language segments
-      - type: python
-        style: plain
-        foreground: "yellow"
-        template: "  {{ .Full }} "
-      - type: go
-        style: plain
-        foreground: "cyan"
-        template: " {{ .Full }} "
-      - type: rust
-        style: plain
-        foreground: "red"
-        template: " {{ .Full }} "
-      - type: node
-        style: plain
-        foreground: "p:sky"
-        template: " {{ .Full }} "
-      - type: project
-        style: plain
-        foreground: "p:rosewater"
-        template: >
-          {{ if .Error }} {{ .Error }}{{ else -}}
-          {{ if .Version }} {{.Version}}{{ end -}}
-          {{ if .Name }} {{ .Name }} {{ end }}{{ end -}}
-      - type: git
-        foreground: magenta
-        properties:
-          branch_max_length: 25
-          fetch_stash_count: true
-          fetch_status: true
-          fetch_upstream_icon: true
-        style: plain
-        template: >
-          {{ .UpstreamIcon }}{{ .HEAD }}{{ if .BranchStatus }} {{ .BranchStatus }}{{ end -}}
-          {{ if .Working.Changed }}  {{ .Working.String }}{{ end -}}
-          {{ if .Staging.Changed }}  {{ .Staging.String }}{{ end -}}
-          {{ if gt .StashCount 0 }}  {{ .StashCount }}{{ end -}}
-  - type: prompt
-    alignment: left
-    newline: true
-    segments:
-      - type: path
-        style: plain
-        foreground: 'cyan'
-        properties:
-          style: unique
-        template:  {{ .Path }}
-  - type: prompt
-    alignment: right
-    segments:
-      - type: status
-        style: plain
-        foreground: 'green'
-        foreground_templates:
-          - '{{ if gt .Code 0 }}red{{ end }}'
-        template: ' x{{ reason .Code }} '
-      - type: executiontime
-        style: plain
-        foreground: 'green'
-        foreground_templates:
-          - '{{ if gt .Code 0 }}red{{ end }}'
-        properties:
-          style: austin
-        template: ' {{ .FormattedMs }} '
-      - type: session
-        style: plain
-        foreground: darkGray
-        template: >
-          {{ if .SSHSession }} {{ .HostName }}{{ end }}
-  - type: prompt
-    alignment: left
-    newline: true
-    segments:
-      - foreground: 'red'
-        style: plain
-        template: '!'
-        type: root
-      - foreground: 'green'
-        style: plain
-        template: ❯
-        type: text
-
+- type: prompt
+  alignment: left
+  segments:
+  - properties:
+      cache_duration: none
+    template: "\ue235  {{ .Full }} "
+    foreground: yellow
+    type: python
+    style: plain
+  - properties:
+      cache_duration: none
+    template: "\ue627 {{ .Full }} "
+    foreground: cyan
+    type: go
+    style: plain
+  - properties:
+      cache_duration: none
+    template: "\ue7a8 {{ .Full }} "
+    foreground: red
+    type: rust
+    style: plain
+  - properties:
+      cache_duration: none
+    template: "\ue718 {{ .Full }} "
+    foreground: p:sky
+    type: node
+    style: plain
+  - properties:
+      cache_duration: none
+    template: "{{ if .Error }} {{ .Error }}{{ else -}} {{ if .Version }}\uf487 {{.Version}}{{ end -}} {{ if .Name }} {{ .Name }} {{ end }}{{ end -}}"
+    foreground: p:rosewater
+    type: project
+    style: plain
+  - properties:
+      branch_max_length: 25
+      cache_duration: none
+      fetch_stash_count: true
+      fetch_status: true
+      fetch_upstream_icon: true
+    template: "{{ .UpstreamIcon }}{{ .HEAD }}{{ if .BranchStatus }} {{ .BranchStatus }}{{ end -}} {{ if .Working.Changed }} \uf044 {{ .Working.String }}{{ end -}} {{ if .Staging.Changed }} \uf046 {{ .Staging.String }}{{ end -}} {{ if gt .StashCount 0 }} \ueb4b {{ .StashCount }}{{ end -}}"
+    foreground: magenta
+    type: git
+    style: plain
+- type: prompt
+  alignment: left
+  segments:
+  - properties:
+      cache_duration: none
+      style: unique
+    template:  {{ .Path }}
+    foreground: cyan
+    type: path
+    style: plain
+  newline: true
+- type: prompt
+  alignment: right
+  segments:
+  - properties:
+      cache_duration: none
+    template: " x{{ reason .Code }} "
+    foreground: green
+    type: status
+    style: plain
+    foreground_templates:
+    - "{{ if gt .Code 0 }}red{{ end }}"
+  - properties:
+      cache_duration: none
+      style: austin
+    template: " {{ .FormattedMs }} "
+    foreground: green
+    type: executiontime
+    style: plain
+    foreground_templates:
+    - "{{ if gt .Code 0 }}red{{ end }}"
+  - properties:
+      cache_duration: none
+    template: "{{ if .SSHSession }}\ueba9 {{ .HostName }}{{ end }}"
+    foreground: darkGray
+    type: session
+    style: plain
+- type: prompt
+  alignment: left
+  segments:
+  - properties:
+      cache_duration: none
+    template: "!"
+    foreground: red
+    type: root
+    style: plain
+  - properties:
+      cache_duration: none
+    template: ❯
+    foreground: green
+    type: text
+    style: plain
+  newline: true
+version: 3
+shell_integration: true
+final_space: true
