ghostty term info is confusing

--- a/home/private_dot_config/tmux/tmux.conf
+++ b/home/private_dot_config/tmux/tmux.conf
@@ -27,8 +27,8 @@ bind f display-popup \
   -h 40% -w 40% \
   -B -E "tsm"
 
-set -g default-terminal "tmux-256color"
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+set -g default-terminal "xterm-ghostty"
+set-option -ga terminal-overrides ",xterm-ghostty:Tc"
 
 # --------catppuccin mocha
 # --> Catppuccin (Mocha)
